[package]
edition = "2021"
name = "seyda_neen"
version = "0.0.0"
publish = false

[features]
default = ["debug"]
debug = ["panicking/std"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
components-arena = "3.3.3"
composable-allocators = "0.1.1"
educe = "0.4.19"
either = { version = "1.6.1", default-features = false }
exit-no-std = "0.1.0"
macro-attr-2018 = "2.1.2"
panicking = { version = "0.2.0", default-features = false }
tuifw-screen = "0.13.4"
tuifw-window = "0.13.4"

[target.'cfg(windows)'.dependencies]
rlibc = "1.0.0"
