[package]
edition = "2021"
name = "seyda_neen"
version = "0.0.0"
publish = false

[features]
default = ["debug"]
debug = ["panicking/std"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
components-arena = "3.3.3"
composable-allocators = "0.1.1"
educe = "0.4.19"
either = { version = "1.6.1", default-features = false }
enum-derive-2018 = { version = "2.0.1", default-features = false }
exit-no-std = "0.1.0"
int-vec-2d = "0.1.0"
macro-attr-2018 = "2.1.2"
nonmax = { version = "0.5.0", default-features = false }
panicking = { version = "0.2.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["getrandom", "small_rng"] }
tuifw-screen = "0.13.4"
tuifw-window = "0.13.4"
